@@ -1,6 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = foreign
-
 EXTRA_DIST = changelog control copyright libogg-dev.docs libogg-dev.install \
 	libogg0.README.Debian libogg0.install rules
