@@ -1,8 +1,5 @@
 ## Process this with automake to create Makefile.in
 
-AUTOMAKE_OPTIONS = foreign
-
-
 EXTRA_DIST = ogg.def ogg_dynamic.dsp ogg_static.dsp\
 	build_ogg_dynamic.bat build_ogg_dynamic_debug.bat\
 	build_ogg_static.bat build_ogg_static_debug.bat ogg.dsw
